@@ -10,3 +10,8 @@ Fix it by marking the container const, or, since Qt 5.7, use `qAsConst()`:
 
 Also warns if you're passing structs with non-trivial copy-ctor or non-trivial dtor by value, use
 const-ref so that the copy-ctor and dtor don't get called.
+
+#### Fixits
+This check supports adding missing `&` or `const-&` with:
+
+    export CLAZY_FIXIT="fix-range-loop-add-ref"
