@@ -5,3 +5,5 @@ range-loop/main.cpp:48:5: warning: c++11 range-loop might detach Qt container (Q
 range-loop/main.cpp:79:5: warning: c++11 range-loop might detach Qt container (QMultiMap) [-Wclazy-range-loop]
 range-loop/main.cpp:123:10: warning: Missing reference in range-for with non trivial type (SmallNonTrivial) [-Wclazy-range-loop]
 range-loop/main.cpp:169:5: warning: c++11 range-loop might detach Qt container (QList) [-Wclazy-range-loop]
+range-loop/main.cpp:201:10: warning: Missing reference in range-for with non trivial type (QString) [-Wclazy-range-loop]
+range-loop/main.cpp:202:10: warning: Missing reference in range-for with non trivial type (QString) [-Wclazy-range-loop]
