@@ -98,5 +98,7 @@
   - New Checks:
     ifndef-define-typo
     lowercase-qml-type-name
+  - New Fixits:
+    range-loop now supports adding missing refs or const-ref.
   - Removed support for the obscure -DCLAZY_BUILD_UTILS_LIB to simplify the CMakeLists.txt
   - Renamed the clazy plugin from ClangLazy.so to ClazyPlugin.so
